# open-gl-course

./: .gitignore  CMakeLists.txt  main.cpp
runtime/: main.cpp
runtime/base/: IBaseRunner.cpp  IBaseRunner.h
runtime/section01/: Section01Runner.cpp  Section01Runner.h
runtime/section02/: FirstTriangleRunner.cpp  FirstTriangleRunner.h  IndexedDrawRunner.cpp  IndexedDrawRunner.h  InterpolationRunner.cpp  InterpolationRunner.h  TriangleRotationRunner.cpp  TriangleRotationRunner.h  TriangleScalingRunner.cpp  TriangleScalingRunner.h  TriangleTranslationRunner.cpp  TriangleTranslationRunner.h
